.k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: metaproject-zeus-gui
  labels:
    app: metaproject-zeus-gui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metaproject-zeus-gui
  template:
    metadata:
      labels:
        app: metaproject-zeus-gui
    spec:
      securityContext:
        runAsNonRoot: true
      containers:
        - name: gui
          image: ghcr.io/adamvalalsky/metaproject-zeus-gui/web:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
      imagePullSecrets:
        - name: regcred-zeus
