.k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: metaproject-zeus-gui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: metaproject-zeus-gui
