.k8s/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: metaproject-zeus-gui
  annotations:
    kuberentes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - "metaproject-zeus.dyn.cloud.e-infra.cz"
      secretName: metaproject-zeus-gui-dyn-clout-e-infra-cz-tls
  rules:
    - host: "metaproject-zeus.dyn.cloud.e-infra.cz"
      http:
        paths:
          - backend:
              service:
                name: metaproject-zeus-gui
                port:
                  number: 80
            pathType: ImplementationSpecific
